--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,17 +70,21 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+
+  fonts:
+  - family: Lobster
+    fonts:
+      - asset: fonts/Lobster-Regular.ttf
+  - family: Press Start 2P
+    fonts:
+        - asset: fonts/PressStart2P-Regular.ttf
+  - family: Chakra Petch
+    fonts:
+        - asset: fonts/ChakraPetch-Regular.ttf
+  - family: Architects Daughter
+    fonts:
+        - asset: fonts/ArchitectsDaughter-Regular.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
