--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit:
   outline_gradient_button:
+  percent_indicator:
 
 dev_dependencies:
   flutter_test:
