--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,21 @@ dependencies:
   animated_text_kit:
   outline_gradient_button:
   percent_indicator:
+  shared_preferences:
+  flutter_launcher_icons:
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+
   flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -55,15 +60,13 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/sounds/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,17 +77,17 @@ flutter:
 
 
   fonts:
-  - family: Lobster
-    fonts:
-      - asset: fonts/Lobster-Regular.ttf
-  - family: Press Start 2P
-    fonts:
+    - family: Lobster
+      fonts:
+        - asset: fonts/Lobster-Regular.ttf
+    - family: Press Start 2P
+      fonts:
         - asset: fonts/PressStart2P-Regular.ttf
-  - family: Chakra Petch
-    fonts:
+    - family: Chakra Petch
+      fonts:
         - asset: fonts/ChakraPetch-Regular.ttf
-  - family: Architects Daughter
-    fonts:
+    - family: Architects Daughter
+      fonts:
         - asset: fonts/ArchitectsDaughter-Regular.ttf
 
   #   - family: Trajan Pro
